--- a/configs/starship/starship.toml
+++ b/configs/starship/starship.toml
@@ -7,3 +7,10 @@ disabled = true
 [character]
 success_symbol = '[|ψ❯](bold green) '
 error_symbol = '[✗](bold red) '
+
+[custom.bash]
+command = "echo bash"
+description = "Displays 'bash' if in bash shell"
+when = '[ "$STARSHIP_SHELL" = "bash" ]'
+format = '[$output](cyan bold) '
+disabled = false
