Update comments with ZFS Atuin fix for context

--- a/configs/atuin/zfs/config.toml
+++ b/configs/atuin/zfs/config.toml
@@ -1,7 +1,10 @@
-# Note that this file only exists because of the ZFS problem with SQLite.
+# This ZFS-specific config enables Atuin's daemon mode to work around
+# the performance issues between ZFS and SQLite.
 # See https://github.com/atuinsh/atuin/issues/952
-# In 30_misc.sh, we set ATUIN_CONFIG_DIR this folder if we are on a
-# system that uses ZFS.
+#
+# In configs/shell/30_misc.sh, we detect if the Atuin daemon is running
+# and set ATUIN_CONFIG_DIR to point to this file only when needed.
+# Run scripts/setup-atuin-daemon.sh on ZFS systems to set up the daemon.
 
 ## enable or disable automatic sync
 auto_sync = true
@@ -24,7 +27,9 @@ common_subcommands = [
 [theme]
 name = "autumn"
 
-# [Filesystem] ZFS is known to have some issues with SQLite. Atuin uses SQLite heavily. 
-# Fix recommended in https://github.com/atuinsh/atuin/issues/952
+# Enable the Atuin daemon to solve ZFS/SQLite performance issues.
+# The daemon takes database writes off the critical path, preventing
+# the 5+ second hangs that occur with direct SQLite access on ZFS.
+# See: https://github.com/atuinsh/atuin/issues/952
 [daemon]
 enabled = true
