Use more defaults

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -41,6 +41,8 @@
 # -- Only on MacOS --
 - defaults:
     link:
+      create: true
+      relink: true
       if: '[ "$(uname)" = "Darwin" ]'
 - link:
     ~/.gitconfig-sign: configs/git/gitconfig-sign
