Symlink keychain to `~/.local/bin/keychain` (for iPhone)

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -25,6 +25,7 @@
     ~/.local/bin/sync-local-dotfiles: scripts/sync-local-dotfiles.sh
     ~/.local/bin/sync-uv-tools: scripts/sync-uv-tools.sh
     ~/.local/bin/upload-file: scripts/upload-file.sh
+    ~/.local/bin/keychain: submodules/mydotbins/linux/amd64/bin/keychain
     ~/.mambarc: configs/mamba/mambarc
     ~/.oh-my-zsh: submodules/oh-my-zsh
     ~/.tmux.conf: submodules/tmux/.tmux.conf
