Use local copy of `~/.tmux.conf.local` (from 94df58b)
From https://github.com/gpakosz/.tmux/blob/94df58b12c1fda2ba92bfdc0092661d1a7895777/.tmux.conf.local

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -29,7 +29,7 @@
     ~/.mambarc: configs/mamba/mambarc
     ~/.oh-my-zsh: submodules/oh-my-zsh
     ~/.tmux.conf: submodules/tmux/.tmux.conf
-    ~/.tmux.conf.local: submodules/tmux/.tmux.conf.local
+    ~/.tmux.conf.local: configs/tmux/tmux.conf.local
     ~/.zshrc: configs/zsh/zshrc
     ~/dotfiles/submodules/oh-my-zsh/themes/mytheme.zsh-theme: configs/zsh/mytheme.zsh-theme
 
