--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -1,138 +1,89 @@
-# This is an example Hyprland config file.
-# Refer to the wiki for more information.
-# https://wiki.hypr.land/Configuring/
-
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
-
+# Hyprland Configuration
+# Refer to the wiki for more information: https://wiki.hyprland.org/Configuring/
 
 ################
 ### MONITORS ###
 ################
 
-# See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
+# See https://wiki.hyprland.org/Configuring/Monitors/
+monitor=,5120x2160,auto,2
 
 ###################
 ### MY PROGRAMS ###
 ###################
 
-# See https://wiki.hypr.land/Configuring/Keywords/
-
 # Set programs that you use
-$terminal = kitty
-$fileManager = dolphin
+$terminal = ghostty
+$fileManager = nautilus
 $menu = wofi --show drun
-
 
 #################
 ### AUTOSTART ###
 #################
 
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-
+# Autostart necessary processes
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = waybar
+exec-once = mako
+exec-once = swww-daemon
+exec-once = wl-paste --watch cliphist store
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
-# See https://wiki.hypr.land/Configuring/Environment-variables/
-
+# See https://wiki.hyprland.org/Configuring/Environment-variables/
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
-
-###################
-### PERMISSIONS ###
-###################
-
-# See https://wiki.hypr.land/Configuring/Permissions/
-# Please note permission changes here require a Hyprland restart and are not applied on-the-fly
-# for security reasons
-
-# ecosystem {
-#   enforce_permissions = 1
-# }
-
-# permission = /usr/(bin|local/bin)/grim, screencopy, allow
-# permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
-# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
-
 
 #####################
 ### LOOK AND FEEL ###
 #####################
 
-# Refer to https://wiki.hypr.land/Configuring/Variables/
-
-# https://wiki.hypr.land/Configuring/Variables/#general
+# General
 general {
     gaps_in = 5
-    gaps_out = 20
-
+    gaps_out = 10
     border_size = 2
-
-    # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
-
-    # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
+    resize_on_border = true
     allow_tearing = false
-
     layout = dwindle
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#decoration
+# Decoration
 decoration {
     rounding = 10
     rounding_power = 2
-
-    # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
-
+    
     shadow {
         enabled = true
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
     }
-
-    # https://wiki.hypr.land/Configuring/Variables/#blur
+    
     blur {
         enabled = true
         size = 3
         passes = 1
-
         vibrancy = 0.1696
     }
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#animations
+# Animations
 animations {
     enabled = yes, please :)
-
-    # Default animations, see https://wiki.hypr.land/Configuring/Animations/ for more
-
+    
     bezier = easeOutQuint,0.23,1,0.32,1
     bezier = easeInOutCubic,0.65,0.05,0.36,1
     bezier = linear,0,0,1,1
     bezier = almostLinear,0.5,0.5,0.75,1.0
     bezier = quick,0.15,0,0.1,1
-
+    
     animation = global, 1, 10, default
     animation = border, 1, 5.39, easeOutQuint
     animation = windows, 1, 4.79, easeOutQuint
@@ -151,84 +102,68 @@ animations {
     animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
 
-# Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
-# "Smart gaps" / "No gaps when only"
-# uncomment all if you wish to use that.
-# workspace = w[tv1], gapsout:0, gapsin:0
-# workspace = f[1], gapsout:0, gapsin:0
-# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrule = bordersize 0, floating:0, onworkspace:f[1]
-# windowrule = rounding 0, floating:0, onworkspace:f[1]
-
-# See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
+# Layouts
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+    pseudotile = true
+    preserve_split = true
 }
 
-# See https://wiki.hypr.land/Configuring/Master-Layout/ for more
 master {
     new_status = master
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#misc
+# Misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 1
+    disable_hyprland_logo = false
 }
-
 
 #############
 ### INPUT ###
 #############
 
-# https://wiki.hypr.land/Configuring/Variables/#input
 input {
     kb_layout = us
     kb_variant =
     kb_model =
     kb_options =
     kb_rules =
-
+    
     follow_mouse = 1
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
+    sensitivity = 0
+    
     touchpad {
         natural_scroll = false
     }
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = false
 }
 
-# Example per-device config
-# See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
+# Per-device config
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
 }
 
-
 ###################
 ### KEYBINDINGS ###
 ###################
 
-# See https://wiki.hypr.land/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+$mainMod = SUPER
 
-# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
+# Application launchers
 bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, R, exec, $menu
+
+# Window management
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, P, pseudo,
+bind = $mainMod, J, togglesplit,
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -260,7 +195,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
+# Special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
@@ -272,7 +207,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Laptop multimedia keys for volume and LCD brightness
+# Multimedia keys
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
@@ -280,7 +215,7 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
-# Requires playerctl
+# Media player controls
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
@@ -290,14 +225,6 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ### WINDOWS AND WORKSPACES ###
 ##############################
 
-# See https://wiki.hypr.land/Configuring/Window-Rules/ for more
-# See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
+# Window rules
 windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
