--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -15,7 +15,7 @@ monitor=,5120x2160,auto,2
 # Set programs that you use
 $terminal = ghostty
 $fileManager = nautilus
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 #################
 ### AUTOSTART ###
