--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,6 +19,8 @@
     ~/.gitconfig-personal: configs/git/gitconfig-personal
     ~/.gitconfig: configs/git/gitconfig
     ~/.config/hypr/hyprland.conf: configs/hypr/hyprland.conf
+    ~/.config/waybar: submodules/mechabar
+    ~/.config/rofi: submodules/mechabar/rofi
     ~/.local/bin/nbviewer: scripts/nbviewer.sh
     ~/.local/bin/pypi-sha256: scripts/pypi-sha256.sh
     ~/.local/bin/run: scripts/run.sh
