--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -228,3 +228,10 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # Window rules
 windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# Fix blurry VS Code and Cursor:
+xwayland {
+    force_zero_scaling = true
+}
+env = XCURSOR_SIZE,32
+env = GDK_SCALE,2
