--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -27,6 +27,7 @@ exec-once = waybar
 exec-once = mako
 exec-once = swww-daemon
 exec-once = wl-paste --watch cliphist store
+exec-once = swww img ~/Pictures/background.jpeg
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -151,61 +152,73 @@ device {
 ### KEYBINDINGS ###
 ###################
 
-$mainMod = SUPER
+$HOLD_HOME = ALT_R CONTROL_R SHIFT_R
+$HOLD_END = ALT_R CONTROL_R
 
 # Application launchers
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, R, exec, $menu
+bind = SUPER, SPACE, exec, $menu
+
+## -- from Keyboard Maestro
+bind = $HOLD_HOME, 1, exec, 1password
+bind = $HOLD_HOME, B, exec, brave
+bind = $HOLD_HOME, C, exec, calendar
+bind = $HOLD_HOME, U, exec, cursor
+bind = $HOLD_HOME, G, exec, google-chrome
+bind = $HOLD_HOME, T, exec, ghostty
+bind = $HOLD_HOME, E, exec, mailspring
+bind = $HOLD_HOME, S, exec, slack
+bind = $HOLD_HOME, P, exec, spotify
+bind = $HOLD_HOME, V, exec, visual-studio-code
+bind = $HOLD_HOME, Z, exec, zoom
 
 # Window management
-bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, P, pseudo,
-bind = $mainMod, J, togglesplit,
+bind = ALT, F4, killactive,  # Command+Q (keyd remap)
+bind = $HOLD_HOME, M, exit,
+bind = $HOLD_HOME, F, togglefloating,
+bind = $HOLD_HOME, P, pseudo,
+bind = $HOLD_HOME, J, togglesplit,
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $HOLD_HOME, left, movefocus, l
+bind = $HOLD_HOME, right, movefocus, r
+bind = $HOLD_HOME, up, movefocus, u
+bind = $HOLD_HOME, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = $HOLD_HOME, 1, workspace, 1
+bind = $HOLD_HOME, 2, workspace, 2
+bind = $HOLD_HOME, 3, workspace, 3
+bind = $HOLD_HOME, 4, workspace, 4
+bind = $HOLD_HOME, 5, workspace, 5
+bind = $HOLD_HOME, 6, workspace, 6
+bind = $HOLD_HOME, 7, workspace, 7
+bind = $HOLD_HOME, 8, workspace, 8
+bind = $HOLD_HOME, 9, workspace, 9
+bind = $HOLD_HOME, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $HOLD_HOME Super_R, 1, movetoworkspace, 1
+bind = $HOLD_HOME Super_R, 2, movetoworkspace, 2
+bind = $HOLD_HOME Super_R, 3, movetoworkspace, 3
+bind = $HOLD_HOME Super_R, 4, movetoworkspace, 4
+bind = $HOLD_HOME Super_R, 5, movetoworkspace, 5
+bind = $HOLD_HOME Super_R, 6, movetoworkspace, 6
+bind = $HOLD_HOME Super_R, 7, movetoworkspace, 7
+bind = $HOLD_HOME Super_R, 8, movetoworkspace, 8
+bind = $HOLD_HOME Super_R, 9, movetoworkspace, 9
+bind = $HOLD_HOME Super_R, 0, movetoworkspace, 10
 
 # Special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $HOLD_HOME, S, togglespecialworkspace, magic
+bind = $HOLD_HOME Super_R, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $HOLD_HOME, mouse_down, workspace, e+1
+bind = $HOLD_HOME, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bindm = $HOLD_HOME, mouse:272, movewindow
+bindm = $HOLD_HOME, mouse:273, resizewindow
 
 # Multimedia keys
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
