--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -6,7 +6,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,5120x2160,auto,2
+monitor=,highres,auto,2
 
 ###################
 ### MY PROGRAMS ###
@@ -152,6 +152,7 @@ device {
 ### KEYBINDINGS ###
 ###################
 
+$HYPER = ALT_R CONTROL_R SHIFT_R SUPER_R
 $HOLD_HOME = ALT_R CONTROL_R SHIFT_R
 $HOLD_END = ALT_R CONTROL_R
 
@@ -168,53 +169,53 @@ bind = $HOLD_HOME, T, exec, ghostty
 bind = $HOLD_HOME, E, exec, mailspring
 bind = $HOLD_HOME, S, exec, slack
 bind = $HOLD_HOME, P, exec, spotify
-bind = $HOLD_HOME, V, exec, visual-studio-code
+bind = $HOLD_HOME, V, exec, code
 bind = $HOLD_HOME, Z, exec, zoom
 
 # Window management
 bind = ALT, F4, killactive,  # Command+Q (keyd remap)
-bind = $HOLD_HOME, M, exit,
-bind = $HOLD_HOME, F, togglefloating,
-bind = $HOLD_HOME, P, pseudo,
-bind = $HOLD_HOME, J, togglesplit,
+bind = $HYPER, M, exit,
+bind = $HYPER, F, togglefloating,
+bind = $HYPER, P, pseudo,
+bind = $HYPER, J, togglesplit,
 
 # Move focus with mainMod + arrow keys
-bind = $HOLD_HOME, left, movefocus, l
-bind = $HOLD_HOME, right, movefocus, r
-bind = $HOLD_HOME, up, movefocus, u
-bind = $HOLD_HOME, down, movefocus, d
+bind = $HOLD_END, left, movefocus, l
+bind = $HOLD_END, right, movefocus, r
+bind = $HOLD_END, up, movefocus, u
+bind = $HOLD_END, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $HOLD_HOME, 1, workspace, 1
-bind = $HOLD_HOME, 2, workspace, 2
-bind = $HOLD_HOME, 3, workspace, 3
-bind = $HOLD_HOME, 4, workspace, 4
-bind = $HOLD_HOME, 5, workspace, 5
-bind = $HOLD_HOME, 6, workspace, 6
-bind = $HOLD_HOME, 7, workspace, 7
-bind = $HOLD_HOME, 8, workspace, 8
-bind = $HOLD_HOME, 9, workspace, 9
-bind = $HOLD_HOME, 0, workspace, 10
+bind = SUPER, 1, workspace, 1
+bind = SUPER, 2, workspace, 2
+bind = SUPER, 3, workspace, 3
+bind = SUPER, 4, workspace, 4
+bind = SUPER, 5, workspace, 5
+bind = SUPER, 6, workspace, 6
+bind = SUPER, 7, workspace, 7
+bind = SUPER, 8, workspace, 8
+bind = SUPER, 9, workspace, 9
+bind = SUPER, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $HOLD_HOME Super_R, 1, movetoworkspace, 1
-bind = $HOLD_HOME Super_R, 2, movetoworkspace, 2
-bind = $HOLD_HOME Super_R, 3, movetoworkspace, 3
-bind = $HOLD_HOME Super_R, 4, movetoworkspace, 4
-bind = $HOLD_HOME Super_R, 5, movetoworkspace, 5
-bind = $HOLD_HOME Super_R, 6, movetoworkspace, 6
-bind = $HOLD_HOME Super_R, 7, movetoworkspace, 7
-bind = $HOLD_HOME Super_R, 8, movetoworkspace, 8
-bind = $HOLD_HOME Super_R, 9, movetoworkspace, 9
-bind = $HOLD_HOME Super_R, 0, movetoworkspace, 10
+bind = $HYPER Super_R, 1, movetoworkspace, 1
+bind = $HYPER Super_R, 2, movetoworkspace, 2
+bind = $HYPER Super_R, 3, movetoworkspace, 3
+bind = $HYPER Super_R, 4, movetoworkspace, 4
+bind = $HYPER Super_R, 5, movetoworkspace, 5
+bind = $HYPER Super_R, 6, movetoworkspace, 6
+bind = $HYPER Super_R, 7, movetoworkspace, 7
+bind = $HYPER Super_R, 8, movetoworkspace, 8
+bind = $HYPER Super_R, 9, movetoworkspace, 9
+bind = $HYPER Super_R, 0, movetoworkspace, 10
 
 # Special workspace (scratchpad)
-bind = $HOLD_HOME, S, togglespecialworkspace, magic
-bind = $HOLD_HOME Super_R, S, movetoworkspace, special:magic
+bind = $HYPER, S, togglespecialworkspace, magic
+bind = $HYPER Super_R, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $HOLD_HOME, mouse_down, workspace, e+1
-bind = $HOLD_HOME, mouse_up, workspace, e-1
+bind = ALT_L, mouse_down, workspace, e+1
+bind = ALT_L, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $HOLD_HOME, mouse:272, movewindow
