--- a/configs/agent-cli/config.toml
+++ b/configs/agent-cli/config.toml
@@ -1,5 +1,7 @@
 [defaults]
 model = "devstral:24b"
-ollama_host = "http://192.168.1.143:11434"
+ollama_host = "http://pc.local:11434"
+asr_server_ip = "192.168.1.143"
+tts_server_ip = "192.168.1.143"
 input_device_name = "logitech,airpods"
 input_device_output_name = "iloud,airpods,dell,macbook"
