Config link only

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,7 +9,7 @@
     ~/.bashrc: configs/bash/bashrc
     ~/.condarc: configs/conda/condarc
     ~/.config/atuin: configs/atuin
-    ~/.config/agent-cli: configs/agent-cli
+    ~/.config/agent-cli/config.toml: configs/agent-cli/config.toml
     ~/.config/dask/distributed.yaml: configs/dask/distributed.yaml
     ~/.config/dotbins/config.yaml: submodules/dotbins/dotbins.yaml
     ~/.config/git/attributes: configs/git/attributes
