--- a/configs/agent-cli/config.toml
+++ b/configs/agent-cli/config.toml
@@ -5,4 +5,4 @@ asr_server_ip = "192.168.1.143"
 tts_server_ip = "192.168.1.143"
 wake_server_ip = "192.168.1.143"
 input_device_name = "logitech,airpods,macbook"
-input_device_output_name = "iloud,airpods,dell,macbook"
+output_device_name = "iloud,airpods,dell,macbook"
