--- a/configs/agent-cli/config.toml
+++ b/configs/agent-cli/config.toml
@@ -4,6 +4,7 @@ llm-ollama-host = "http://pc.local:11434"
 asr-wyoming-ip = "192.168.1.143"
 tts-wyoming-ip = "192.168.1.143"
 tts-kokoro-host = "http://pc.local:8880/v1"
+tts-kokoro-voice = "af_bella(1)+af_nicole(1.5)"
 wake-server-ip = "192.168.1.143"
 input-device-name = "logitech,airpods,macbook"
 output-device-name = "iloud,airpods,dell,macbook"
