Use multiline TOML statement

--- a/configs/agent-cli/config.toml
+++ b/configs/agent-cli/config.toml
@@ -10,4 +10,10 @@ input-device-name = "logitech,airpods,macbook"
 output-device-name = "iloud,airpods,dell,macbook"
 
 [transcribe]
-extra-instructions = "Assume the user is often discussing Python programming. Use backticks for variable names, function names, and other code elements. Follow PEP8: use `snake_case` for variables, functions, and package names; `CamelCase` for classes. Other frequent words are `pipefunc`, IonQ, trapped-ion quantum computer. My name is Bas Nijholt."
+extra-instructions = """
+Assume the user is often discussing Python programming.
+Use backticks for variable names, function names, and other code elements.
+Follow PEP8: use `snake_case` for variables, functions, and package names; `CamelCase` for classes.
+Other frequent words are `pipefunc` (or `PipeFunc`), IonQ (a quantum computing company), trapped-ion quantum computer, `pre-commit`, `pytest`, `ruff`, `unidep`.
+My name is Bas Nijholt.
+"""
