--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,6 +10,7 @@
     ~/.condarc: configs/conda/condarc
     ~/.config/atuin: configs/atuin
     ~/.config/agent-cli/config.toml: configs/agent-cli/config.toml
+    ~/.config/bat/config: configs/bat/config
     ~/.config/dask/distributed.yaml: configs/dask/distributed.yaml
     ~/.config/dotbins/config.yaml: submodules/dotbins/dotbins.yaml
     ~/.config/git/attributes: configs/git/attributes
