--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -186,32 +186,32 @@ bind = $HOLD_END, up, movefocus, u
 bind = $HOLD_END, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = SUPER, 1, workspace, 1
-bind = SUPER, 2, workspace, 2
-bind = SUPER, 3, workspace, 3
-bind = SUPER, 4, workspace, 4
-bind = SUPER, 5, workspace, 5
-bind = SUPER, 6, workspace, 6
-bind = SUPER, 7, workspace, 7
-bind = SUPER, 8, workspace, 8
-bind = SUPER, 9, workspace, 9
-bind = SUPER, 0, workspace, 10
+bind = SUPER_R, 1, workspace, 1
+bind = SUPER_R, 2, workspace, 2
+bind = SUPER_R, 3, workspace, 3
+bind = SUPER_R, 4, workspace, 4
+bind = SUPER_R, 5, workspace, 5
+bind = SUPER_R, 6, workspace, 6
+bind = SUPER_R, 7, workspace, 7
+bind = SUPER_R, 8, workspace, 8
+bind = SUPER_R, 9, workspace, 9
+bind = SUPER_R, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $HYPER Super_R, 1, movetoworkspace, 1
-bind = $HYPER Super_R, 2, movetoworkspace, 2
-bind = $HYPER Super_R, 3, movetoworkspace, 3
-bind = $HYPER Super_R, 4, movetoworkspace, 4
-bind = $HYPER Super_R, 5, movetoworkspace, 5
-bind = $HYPER Super_R, 6, movetoworkspace, 6
-bind = $HYPER Super_R, 7, movetoworkspace, 7
-bind = $HYPER Super_R, 8, movetoworkspace, 8
-bind = $HYPER Super_R, 9, movetoworkspace, 9
-bind = $HYPER Super_R, 0, movetoworkspace, 10
+bind = SUPER_R SHIFT, 1, movetoworkspace, 1
+bind = SUPER_R SHIFT, 2, movetoworkspace, 2
+bind = SUPER_R SHIFT, 3, movetoworkspace, 3
+bind = SUPER_R SHIFT, 4, movetoworkspace, 4
+bind = SUPER_R SHIFT, 5, movetoworkspace, 5
+bind = SUPER_R SHIFT, 6, movetoworkspace, 6
+bind = SUPER_R SHIFT, 7, movetoworkspace, 7
+bind = SUPER_R SHIFT, 8, movetoworkspace, 8
+bind = SUPER_R SHIFT, 9, movetoworkspace, 9
+bind = SUPER_R SHIFT, 0, movetoworkspace, 10
 
 # Special workspace (scratchpad)
-bind = $HYPER, S, togglespecialworkspace, magic
-bind = $HYPER Super_R, S, movetoworkspace, special:magic
+bind = SUPER_R, S, togglespecialworkspace, magic
+bind = SUPER_R SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = ALT_L, mouse_down, workspace, e+1
