Make SUPER_R the main mod key

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -152,9 +152,11 @@ device {
 ### KEYBINDINGS ###
 ###################
 
-$HYPER = ALT_R CONTROL_R SHIFT_R SUPER_R
 $HOLD_HOME = ALT_R CONTROL_R SHIFT_R
+$HYPER = HOLD_HOME SUPER_R
 $HOLD_END = ALT_R CONTROL_R
+
+# Note: SUPER_R is on the right thumb cluster (top left) but also holding Command+Backspace (via ZMK)
 
 # Application launchers
 bind = SUPER, SPACE, exec, $menu
@@ -174,16 +176,16 @@ bind = $HOLD_HOME, Z, exec, zoom
 
 # Window management
 bind = ALT, F4, killactive,  # Command+Q (keyd remap)
-bind = $HYPER, M, exit,
-bind = $HYPER, F, togglefloating,
-bind = $HYPER, P, pseudo,
-bind = $HYPER, J, togglesplit,
+bind = $SUPER_R, M, exit,
+bind = $SUPER_R, F, togglefloating,
+bind = $SUPER_R, P, pseudo,
+bind = $SUPER_R, J, togglesplit,
 
-# Move focus with mainMod + arrow keys
-bind = $HOLD_END, left, movefocus, l
-bind = $HOLD_END, right, movefocus, r
-bind = $HOLD_END, up, movefocus, u
-bind = $HOLD_END, down, movefocus, d
+# Move focus with SUPER_R + arrow keys
+bind = $SUPER_R, left, movefocus, l
+bind = $SUPER_R, right, movefocus, r
+bind = $SUPER_R, up, movefocus, u
+bind = $SUPER_R, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = SUPER_R, 1, workspace, 1
@@ -218,8 +220,8 @@ bind = ALT_L, mouse_down, workspace, e+1
 bind = ALT_L, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $HOLD_HOME, mouse:272, movewindow
-bindm = $HOLD_HOME, mouse:273, resizewindow
+bindm = SUPER_R, mouse:272, movewindow
+bindm = SUPER_R, mouse:273, resizewindow
 
 # Multimedia keys
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
