Move focus script

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -162,17 +162,17 @@ $HOLD_END = ALT_R CONTROL_R
 bind = SUPER, SPACE, exec, $menu
 
 ## -- from Keyboard Maestro
-bind = $HOLD_HOME, 1, exec, 1password
-bind = $HOLD_HOME, B, exec, brave
-bind = $HOLD_HOME, C, exec, calendar
-bind = $HOLD_HOME, U, exec, cursor
-bind = $HOLD_HOME, G, exec, google-chrome
-bind = $HOLD_HOME, T, exec, ghostty
-bind = $HOLD_HOME, E, exec, mailspring
-bind = $HOLD_HOME, S, exec, slack
-bind = $HOLD_HOME, P, exec, spotify
-bind = $HOLD_HOME, V, exec, code
-bind = $HOLD_HOME, Z, exec, zoom
+bind = $HOLD_HOME, 1, exec, ~/.config/hypr/scripts/focus-or-run.sh "1Password" "1password"
+bind = $HOLD_HOME, B, exec, ~/.config/hypr/scripts/focus-or-run.sh "Brave-browser" "brave"
+bind = $HOLD_HOME, C, exec, ~/.config/hypr/scripts/focus-or-run.sh "org.gnome.Calculator" "calendar"
+bind = $HOLD_HOME, U, exec, ~/.config/hypr/scripts/focus-or-run.sh "Cursor" "cursor"
+bind = $HOLD_HOME, G, exec, ~/.config/hypr/scripts/focus-or-run.sh "firefox" "firefox"
+bind = $HOLD_HOME, T, exec, ~/.config/hypr/scripts/focus-or-run.sh "com.mitchellh.ghostty" "ghostty"
+bind = $HOLD_HOME, E, exec, ~/.config/hypr/scripts/focus-or-run.sh "Mailspring" "mailspring"
+bind = $HOLD_HOME, S, exec, ~/.config/hypr/scripts/focus-or-run.sh "Slack" "slack"
+bind = $HOLD_HOME, P, exec, ~/.config/hypr/scripts/focus-or-run.sh "Spotify" "spotify"
+bind = $HOLD_HOME, V, exec, ~/.config/hypr/scripts/focus-or-run.sh "Code" "code"
+bind = $HOLD_HOME, Z, exec, ~/.config/hypr/scripts/focus-or-run.sh "Zoom" "zoom"  # Not installed yet
 
 # Window management
 bind = ALT, F4, killactive,  # Command+Q (keyd remap)
