Add thunderbird as default email client

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -168,7 +168,7 @@ bind = $HOLD_HOME, C, exec, ~/.config/hypr/scripts/focus-or-run.sh "org.gnome.Ca
 bind = $HOLD_HOME, U, exec, ~/.config/hypr/scripts/focus-or-run.sh "Cursor" "cursor"
 bind = $HOLD_HOME, G, exec, ~/.config/hypr/scripts/focus-or-run.sh "firefox" "firefox"
 bind = $HOLD_HOME, T, exec, ~/.config/hypr/scripts/focus-or-run.sh "com.mitchellh.ghostty" "ghostty"
-bind = $HOLD_HOME, E, exec, ~/.config/hypr/scripts/focus-or-run.sh "Mailspring" "mailspring"
+bind = $HOLD_HOME, E, exec, ~/.config/hypr/scripts/focus-or-run.sh "thunderbird" "thunderbird"
 bind = $HOLD_HOME, S, exec, ~/.config/hypr/scripts/focus-or-run.sh "Slack" "slack"
 bind = $HOLD_HOME, P, exec, ~/.config/hypr/scripts/focus-or-run.sh "Spotify" "spotify"
 bind = $HOLD_HOME, V, exec, ~/.config/hypr/scripts/focus-or-run.sh "Code" "code"
