--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -27,7 +27,7 @@ exec-once = waybar
 exec-once = mako
 exec-once = swww-daemon
 exec-once = wl-paste --watch cliphist store
-exec-once = swww img ~/Pictures/background.jpeg
+exec-once = ~/.config/hypr/scripts/wallpaper.sh
 
 #############################
 ### ENVIRONMENT VARIABLES ###
