--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -174,6 +174,9 @@ bind = $HOLD_HOME, P, exec, ~/.config/hypr/scripts/focus-or-run.sh "Spotify" "sp
 bind = $HOLD_HOME, V, exec, ~/.config/hypr/scripts/focus-or-run.sh "Code" "code"
 bind = $HOLD_HOME, Z, exec, ~/.config/hypr/scripts/focus-or-run.sh "Zoom" "zoom"  # Not installed yet
 
+# agent-cli
+bind = $HOLD_HOME, R, exec, ~/.config/hypr/scripts/toggle-transcription.sh
+
 # Window management
 bind = ALT, F4, killactive,  # Command+Q (keyd remap)
 bind = $SUPER_R, M, exit,
