Set Wayland related env vars in hyprland

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -255,3 +255,10 @@ xwayland {
 }
 env = XCURSOR_SIZE,32
 env = GDK_SCALE,2
+
+# Wayland everywhere
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+env = GDK_BACKEND,wayland
+env = QT_QPA_PLATFORM,wayland
+env = SDL_VIDEODRIVER,wayland
+env = MOZ_ENABLE_WAYLAND,1
