Add agent-cli scripts and keys to hyprland

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -176,7 +176,9 @@ bind = $HOLD_HOME, V, exec, ~/.config/hypr/scripts/focus-or-run.sh "Code" "code"
 bind = $HOLD_HOME, Z, exec, ~/.config/hypr/scripts/focus-or-run.sh "Zoom" "zoom"  # Not installed yet
 
 # agent-cli
-bind = $HOLD_HOME, R, exec, ~/.config/hypr/scripts/toggle-transcription.sh
+bind = $HOLD_HOME, R, exec, ~/.config/hypr/scripts/agent-cli-toggle-transcription.sh
+bind = $HOLD_HOME, A, exec, ~/.config/hypr/scripts/agent-cli-toggle-voice-edit.sh
+bind = $HOLD_HOME, F, exec, ~/.config/hypr/scripts/agent-cli-toggle-autocorrect.sh
 
 # Window management
 bind = ALT, F4, killactive,  # Command+Q (keyd remap)
