--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -23,8 +23,7 @@ $menu = rofi -show drun
 
 # Autostart necessary processes
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = waybar
-exec-once = mako
+exec-once = hyprpanel
 exec-once = swww-daemon
 exec-once = wl-paste --watch cliphist store
 exec-once = wl-clip-persist --clipboard both
