--- a/configs/starship/starship.toml
+++ b/configs/starship/starship.toml
@@ -14,3 +14,6 @@ description = "Displays 'bash' if in bash shell"
 when = '[ "$STARSHIP_SHELL" = "bash" ]'
 format = '[$output](cyan bold) '
 disabled = false
+
+[nodejs]
+disabled = true
